8178380: Module system implementation refresh (5/2017)
Co-authored-by: Serguei Spitsyn <serguei.spitsyn@oracle.com>
Reviewed-by: lfoltan, hseigel, mchung, sspitsyn